k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-demo
  namespace: jenkins-k8s
  labels:
    app: golang-demo
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30003
  selector:
    app: golang-demo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-demo
  namespace: jenkins-k8s
  labels:
    app: golang-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-demo
  template:
    metadata:
      labels:
        app: golang-demo
    spec:
      containers:
      - name: golang-demo
        image: firexuxiaoman/golang-demo:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
